//Gen by 场景资源配置.xlsx\角色资源配置
syntax = "proto3";
message RoleResourceConfig
{
    int32 ID = 1;
    string AssetPath = 3;
}


message RoleResourceConfigList
{
    repeated RoleResourceConfig dataList = 1;
}
